external/lib25519-20241004/build/arm64/pow/inv25519/arm64-maa4-redmul/shared/result-compile-fe25519_freeze
fe25519_freeze.S:51:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
